--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/codestyle.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/timesheet.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/joint.css'}">
 
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
@@ -31,6 +32,10 @@
         <script src="@{'/public/javascripts/drilldown.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
         <script src="@{'/public/javascripts/timesheet.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
+        <script src="@{'/public/javascripts/lodash.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/backbone-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/joint.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
