--- a/app/views/Application/amchart_a.html
+++ b/app/views/Application/amchart_a.html
@@ -1,6 +1,9 @@
 #{extends 'main.html' /}
 #{set title:'Stacked and Clustered Column Chart with AmCharts' /}
 <head>
+    <script src="/public/javascripts/highlight.min.js"></script>
+    <link href="/public/stylesheets/default.min.css" rel="stylesheet" />
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
@@ -169,6 +172,158 @@
         </div>
 
         <div id="code" class="tab-pane fade">
+            <pre><code class="xml">
+                &lt;style&gt;
+                #chartdiv {
+                width     : 100%;
+                height    : 435px;
+                font-size  : 11px;
+                }
+                &lt;/style&gt;
+
+                &lt;div id="chartdiv"&gt;&lt;/div&gt;
+                &lt;div class="container-fluid"&gt;
+                &lt;div class="row text-center" style="overflow:hidden;"&gt;
+                &lt;div class="col-sm-3" style="float: none !important;display: inline-block;"&gt;
+                &lt;label class="text-left"&gt;Angle:&lt;/label&gt;
+                &lt;input class="chart-input" data-property="angle" type="range" min="0" max="89" value="30" step="1"/&gt;
+                &lt;/div&gt;
+
+                &lt;div class="col-sm-3" style="float: none !important;display: inline-block;"&gt;
+                &lt;label class="text-left"&gt;Depth:&lt;/label&gt;
+                &lt;input class="chart-input" data-property="depth3D" type="range" min="1" max="120" value="20" step="1"/&gt;
+                &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;/div&gt;
+
+                &lt;script&gt;
+                var chart = AmCharts.makeChart( "chartdiv", {
+                "type": "serial",
+                "theme": "light",
+                "depth3D": 20,
+                "angle": 30,
+                "legend": {
+                "horizontalGap": 10,
+                "useGraphSettings": true,
+                "markerSize": 10
+                },
+                "dataProvider": [ {
+                "year": 2003,
+                "europe": 2.5,
+                "namerica": 2.5,
+                "asia": 2.1,
+                "lamerica": 1.2,
+                "meast": 0.2,
+                "africa": 0.1
+                }, {
+                "year": 2004,
+                "europe": 2.6,
+                "namerica": 2.7,
+                "asia": 2.2,
+                "lamerica": 1.3,
+                "meast": 0.3,
+                "africa": 0.1
+                }, {
+                "year": 2005,
+                "europe": 2.8,
+                "namerica": 2.9,
+                "asia": 2.4,
+                "lamerica": 1.4,
+                "meast": 0.3,
+                "africa": 0.1
+                } ],
+                "valueAxes": [ {
+                "stackType": "regular",
+                "axisAlpha": 0,
+                "gridAlpha": 0
+                } ],
+                "graphs": [ {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "Europe",
+                "type": "column",
+                "color": "#000000",
+                "valueField": "europe"
+                }, {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "North America",
+                "type": "column",
+                "color": "#000000",
+                "valueField": "namerica"
+                }, {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "Asia-Pacific",
+                "type": "column",
+                "newStack": true,
+                "color": "#000000",
+                "valueField": "asia"
+                }, {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "Latin America",
+                "type": "column",
+                "color": "#000000",
+                "valueField": "lamerica"
+                }, {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "Middle-East",
+                "type": "column",
+                "color": "#000000",
+                "valueField": "meast"
+                }, {
+                "balloonText": "&lt;b&gt;[[title]]&lt;/b&gt;&lt;br&gt;&lt;span style='font-size:14px'&gt;[[category]]: &lt;b&gt;[[value]]&lt;/b&gt;&lt;/span&gt;",
+                "fillAlphas": 0.8,
+                "labelText": "[[value]]",
+                "lineAlpha": 0.3,
+                "title": "Africa",
+                "type": "column",
+                "color": "#000000",
+                "valueField": "africa"
+                } ],
+                "categoryField": "year",
+                "categoryAxis": {
+                "gridPosition": "start",
+                "axisAlpha": 0,
+                "gridAlpha": 0,
+                "position": "left"
+                },
+                "export": {
+                "enabled": true
+                }
+
+                } );
+                jQuery( '.chart-input' ).off().on( 'input change', function() {
+                var property = jQuery( this ).data( 'property' );
+                var target = chart;
+                chart.startDuration = 0;
+
+                if ( property == 'topRadius' ) {
+                target = chart.graphs[ 0 ];
+                if ( this.value == 0 ) {
+                this.value = undefined;
+                }
+                }
+
+                target[ property ] = this.value;
+                chart.validateNow();
+                } );
+                &lt;/script&gt;
+
+
+            </code></pre>
             <br>
         </div>
     </div>
