--- a/app/views/Application/amchart_c.html
+++ b/app/views/Application/amchart_c.html
@@ -1,6 +1,9 @@
 #{extends 'main.html' /}
 #{set title:'Pyramid Chart with AmCharts' /}
 <head>
+    <script src="/public/javascripts/highlight.min.js"></script>
+    <link href="/public/stylesheets/default.min.css" rel="stylesheet" />
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
 <body>
@@ -71,6 +74,60 @@
         </div>
 
         <div id="code" class="tab-pane fade">
+            <pre><code class="xml">
+                &lt;style&gt;
+                #chartdiv {
+                width     : 100%;
+                height    : 500px;
+                font-size  : 11px;
+                }
+                &lt;/style&gt;
+                &lt;div id="chartdiv"&gt;&lt;/div&gt;
+                &lt;script&gt;
+                var chart = AmCharts.makeChart( "chartdiv", {
+                "type": "funnel",
+                "theme": "light",
+                "dataProvider": [ {
+                "title": "Website visits",
+                "value": 300
+                }, {
+                "title": "Downloads",
+                "value": 123
+                }, {
+                "title": "Requested price list",
+                "value": 98
+                }, {
+                "title": "Contaced for more info",
+                "value": 72
+                }, {
+                "title": "Purchased",
+                "value": 35
+                }, {
+                "title": "Contacted for support",
+                "value": 15
+                }, {
+                "title": "Purchased additional products",
+                "value": 8
+                } ],
+                "balloon": {
+                "fixedPosition": true
+                },
+                "valueField": "value",
+                "titleField": "title",
+                "marginRight": 240,
+                "marginLeft": 50,
+                "startX": -500,
+                "rotate": true,
+                "labelPosition": "right",
+                "balloonText": "[[title]]: [[value]]n[[description]]",
+                "export": {
+                "enabled": true
+                }
+                } );
+                &lt;/script&gt;
+
+
+            </code></pre>
             <br>
         </div>
     </div>
