--- a/app/views/Application/sigma.html
+++ b/app/views/Application/sigma.html
@@ -1,39 +1,22 @@
-#{extends 'main.html' /}
-#{set title:'Graph with Sigma.js' /}
+﻿﻿<!DOCTYPE html>
+<html>
 <head>
+    <title>higlight.js example</title>
+    <script src="/public/javascripts/highlight.min.js"></script>
+    <link href="/public/stylesheets/default.min.css" rel="stylesheet" />
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
-
 <body>
-<div class="container">
-    <ul class="nav nav-tabs">
-
-        <li><a data-toggle="tab" href="#example">Example</a></li>
-
-        <li><a data-toggle="tab" href="#code">code</a></li>
-
-    </ul>
-    <div id="sigma-container" style="height: 500px; width: 500px"></div>
-    <script src="/public/javascripts/sigma.min.js"></script>
-    <script src="/public/javascripts/sigma.parsers.json.min.js"></script>
-
-    <script>
-        sigma.parsers.json('public.files.data.json', {
-            container: 'container',
-            settings: {
-                defaultNodeColor: '#ec5148'
-            }
-        });
-    </script>
-    <div class="tab-content">
-
-        <div id="example" class="tab-pane fade in active">
-            <br>
-        </div>
-
-        <div id="code" class="tab-pane fade">
-            <br>
-        </div>
-    </div>
-
-</div>
+<pre><code class="xml">&lt;!DOCTYPE html&gt;
+    &lt;title&gt;Title&lt;/title&gt;
+    &lt;style&gt;body {width: 500px;}&lt;/style&gt;
+    &lt;script type="application/javascript"&gt;
+    function $init() {return true;}
+    &lt;/script&gt;
+    &lt;body&gt;
+    &lt;p checked class="title" id='title'&gt;Title&lt;/p&gt;
+    &lt;!-- here goes the rest of the page --&gt;
+    &lt;/body&gt;
+</code></pre>
 </body>
+</html>
