--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/codestyle.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/timesheet.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/joint.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/SyntaxHighlighter.css'}">
+        <link rel="stylesheet" href="@{'/public/stylesheets/default.min.css'}">
 
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
@@ -44,6 +46,13 @@
         <script src="@{'/public/javascripts/light.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         <script src="@{'/public/javascripts/dark.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         <script src="@{'/public/javascripts/funnel.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
+
+        <script src="@{'/public/javascripts/shBrushCss.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/javascripts/shBrushJScript.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
+
+        <script src="@{'/public/javascripts/highlight.min.js'}"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
@@ -132,20 +141,6 @@
                             <li><a href="@{Application.amchart_b()}">Line Chart</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="@{Application.amchart_c()}">Pyramid Chart</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="@{Application.sigma()}">Sigma.js</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
                         </ul>
                     </li>
                 </ul>
